updated list of authors

--- a/D2.6/D2.6.tex
+++ b/D2.6/D2.6.tex
@@ -60,7 +60,7 @@
 \newpage
 
 \begin{documentControl}
-    \addVersion{0.1}{03/03/2025}{G.P. Brandino}{Initial draft}
+    \addVersion{0.1}{03/03/2025}{G.P. Brandino, M. Franzon, F. De Giorgi}{Initial draft}
     \addVersion{0.2}{26/03/2025}{L. Heltai}{Abstract, keywords, and
         editing}
     \addVersion{1.0}{[Date]}{[Author name]}{Final version}
