--- a/D4.3/D4.3_data_management_plan.tex
+++ b/D4.3/D4.3_data_management_plan.tex
@@ -37,7 +37,7 @@
 % Abstract and Keywords Section
 \begin{deliverableTable}
     \tableEntry{Abstract}{D4.3 aims to provide a data management plan for the dealii-X project according to the European Commission guidelines}
-    \tableEntry{Keywords}{data management; FAIR data; data accessibility; data security; resources allocation}
+    \tableEntry{Keywords}{data management; FAIR data; data accessibility; data security; resource allocation}
 \end{deliverableTable}
 
 \newpage
