Fix ampersand symbol

--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -251,7 +251,7 @@ To enhance collaboration and knowledge exchange among project partners, we have
 initiated the development of an online seminar series showcasing cutting-edge
 research by dealii-X collaborators and guest speakers. Launching in June 2025,
 the seminars will follow a standard format of a 45-minute lecture followed by a
-15-minute Q&A session. Recordings of the sessions will be made available on the
+15-minute Q\&A session. Recordings of the sessions will be made available on the
 project webpage and shared via social media channels. This initiative will be
 carried out in close collaboration with the VPH Institute, which will assist in
 editing and publishing the multimedia content (WP4).
