--- a/D2.6/D2.6.tex
+++ b/D2.6/D2.6.tex
@@ -44,7 +44,7 @@
         varying technical expertise to interact with the system. The platform
         aims to enable users to define custom no-code nodes based on low-code
         logic. This deliverable will detail the node-based low-code interface
-        using dealii as an example and sketch the no-code approach to simulation
+        using deal.II as an example and sketch the no-code approach to simulation
         management using the defined nodes. Finally, it will outline the
         development plan and future outlook for the PoC. }
         \tableEntry{Keywords}{
@@ -109,7 +109,7 @@ In view of these diverse use cases, we created a list of requirements that the d
     \item A collaborative space, in which professionals with different needs can contribute
     \item A modular design, to allow components to be easily added
     \item An interaction that allows deep customization without requiring specific coding skills
-    \item A trasparent usage of computational resources, ranging from local machines to HPC clusters
+    \item A transparent usage of computational resources, ranging from local machines to HPC clusters
 \end{itemize}
 
 Those requirements naturally bring into play the programming approach that goes under the name of "Low-code/No-code".
@@ -128,31 +128,31 @@ At the heart of many no-code/low-code platforms is a graph-based architecture, w
 \end{itemize}
 
 This graph-based approach is inherently modular and flexible and this enhances reproducibility, as the workflow can be shared, inspected, or modified by others with ease.
-In fig.\ref{nocode-data} we report an example of a data analytics workflow created using the proprietary KNIME IDE. The workflow should be read from left to right, with the beginning being the reading of an XLS file. The data are then passed to both a node that does, in this example, color extraction, and to other tasks like partitioning and model training, but there are also branches for statistics and different kinds of plotting. Each of the nodes can perform complex operations, and custom nodes can be added to the system to extend its capabilities. 
+In Fig.~\ref{nocode-data} we report an example of a data analytics workflow created using the proprietary KNIME IDE. The workflow should be read from left to right, with the beginning being the reading of an XLS file. The data are then passed to both a node that does, in this example, color extraction, and to other tasks like partitioning and model training, but there are also branches for statistics and different kinds of plotting. Each of the nodes can perform complex operations, and custom nodes can be added to the system to extend its capabilities. 
 \begin{figure}
-\label{nocode-data}
 \includegraphics[width=400pt]{nocode-data.png}
 \caption{An examples of a data analysis workflow created using the KNIME IDE}
+\label{nocode-data}
 \end{figure}
 
-The approach depicted so far goes under the name of no-code programming since there is no coding logic involved, only relations between entities. Although this approach works for workflow definition, there could be more complex manipulation that require a coding approach. For these cases, it is still possible to rely on a visual approach that goes under the name of low-code. 
+The approach depicted so far goes under the name of no-code programming since there is no coding logic involved, only relations between entities. Although this approach works for workflow definition, there could be more complex problem settings where some parts need to be manipulated by actually writing code. For these cases, it is still possible to rely on a visual approach that goes under the name of low-code. 
 \begin{figure}
-\label{lowcode}
 \includegraphics[width=400pt]{lowcode.png}
 \caption{An examples of a Fibonacci sequence in CodeWire}
+\label{lowcode}
 \end{figure}
-Fig. \ref{lowcode} shows an example of a piece of code that generates the Fibonacci sequence, written in CodeWire. While retaining the logic and control structure of a programming language, it abstracts the details of the specific programming language. 
+Fig.~\ref{lowcode} shows an example of a piece of code that generates the Fibonacci sequence, written in CodeWire. While retaining the logic and control structure of a programming language, it abstracts the details of the specific programming language. 
 
 The approach we want pursue in the PoC platform for dealii-X should sport both strategies, allowing high-level control by means of the no-code interface, while retaining the possibility of deep customization through the low-code interface. 
 
-This will be achieved by allowing user to define their custom no-code nodes in term of low-code logic.
+This will be achieved by allowing users to define their custom no-code nodes in term of low-code logic.
 
-The rest of the deliverable is organized as follows: in section 2 we sketch the low-code approach with a practical example using the dealii library. In section 3 we sketch instead the no-code approach to the simulation, using the nodes defined in section 2. In section 3 we outline the devolvement plan of PoC and the relative improvements we envision. 
+The rest of the deliverable is organized as follows: in section 2 we sketch the low-code approach with a practical example using the deal.II library. In section 3 we sketch instead the no-code approach to the simulation, using the nodes defined in section 2. In section 3 we outline the development plan of PoC and the relative improvements we envision. 
 
 
 \section{\textcolor{EUblue}{Low-code approach to dealii programming}}
 
-In the present section we go on the details of the design of a node-based low-code interface for an Object Oriented Library, using dealii as an operative example.
+In the present section we go on the details of the design of a node-based low-code interface for an Object Oriented Library, using deal.II as an operative example.
 
 A minimal set of entities and control loop that allow the creation of an object-oriented, Turing-complete language is the following:
 \begin{itemize}
@@ -164,12 +164,12 @@ A minimal set of entities and control loop that allow the creation of an object-
 
 Each of these entities can be represented as a node in a graph, with inputs and outputs. The graph is then traversed in a way that is consistent with the logic of the programming language.
 
-For a example, a basic type like int can be represented, as shown in fig.\ref{sum}, as a node with a single output pin. The sum is then represented as a node with two input pins and one output pin. 
+For a example, a basic type like int can be represented, as shown in Fig.~\ref{sum}, as a node with a single output pin. The sum is then represented as a node with two input pins and one output pin. 
 
 \begin{figure}
-    \label{sum}
     \includegraphics[width=400pt]{sum.png}
     \caption{Node-based mockup of a sum operation}
+    \label{sum}
 \end{figure}
 
 To specify order of the operation, special connectors one the node are used, and special edges are display, to distinguish instruction flow from arguments. For example, subsequent sums would look like (fig.\ref{twosum}).
@@ -183,26 +183,26 @@ To specify order of the operation, special connectors one the node are used, and
 
 Object work in the same way, but member functions nodes can be attached to the object instance node, and the output of the function can then be passed to other nodes.
 
-Fig. \ref{refine} shows an example of a node-based representation of a mesh refinement operation in dealii. The mesh is read from a file, and then refined, calling generic function and member functions of the mesh object.
+Fig.~\ref{refine} shows an example of a node-based representation of a mesh refinement operation in deal.II. The mesh is read from a file, and then refined, calling a generic function and member functions of the mesh object.
 \begin{figure}
-    \label{refine}
     \includegraphics[width=400pt]{refine.png}
     \caption{Node-based mockup of a mesh refinement operation}
+    \label{refine}
 \end{figure}
 
 
-The power of node-based programming is twofold: on one side, it allows to create complex operations without knowing the details of a specific programming language. On the other side, it allows to encapsulate a collection of nodes into a single node, that can be reused in other parts of the program. This hierarchical features unleash the possibility of creating high level entities that can be used by non-expert users. The latter is the key feature that links the low-code and no-code approach, allowing the creation of a single environment that can be used by both expert and non-expert users.
+The power of node-based programming is twofold: on one side, it allows to create complex operations without knowing the details of a specific programming language. On the other side, it allows to encapsulate a collection of nodes into a single node, that can be reused in other parts of the program. These hierarchical features unleash the possibility of creating high level entities that can be used by non-expert users. The latter is the key feature that links the low-code and no-code approach, allowing the creation of a single environment that can be used by both expert and non-expert users.
 
-Moreover, the node-based approach naturally leads to the definition of a computational graph, that can be used to optimize the execution of the program: by analizing the graph, it is possible to determine which parts of it can be executed concurrently, which allows a potential second layer of parallelization on top of the one that is already present in the libraries. Operatively, we are currently investigating the use of the \href{https://github.com/taskflow/taskflow}{taskflow} library to implement graph analysis and node scheduling.   
+Moreover, the node-based approach naturally leads to the definition of a computational graph that can be used to optimize the execution of the program: by analyzing the graph, it is possible to determine which parts of it can be executed concurrently, which allows a potential second layer of parallelization on top of the one that is already present in the libraries. Operatively, we are currently investigating the use of the \href{https://github.com/taskflow/taskflow}{taskflow} library to implement graph analysis and node scheduling.   
 
 \section{\textcolor{EUblue}{No-code approach to simulation management}}
 
 As noted in the previous section, given the hierarchical nature of node-based programming, it is possible to create high-level entities that completely hide the technical details, while still allowing the creation of complex dataflow. For example, the simulation block defined in fig.\ref{nocode-sim} can be encapsulated in a single, opaque node, that only requires e.g. an MRI input and a place to display the results. 
 
 \begin{figure}
-    \label{nocode-sim}
     \includegraphics[width=400pt]{nocode-sim.png}
     \caption{Mockup of the high level no-code interaction}
+    \label{nocode-sim}
 \end{figure}
 
 
@@ -216,9 +216,9 @@ The main development activities for the PoC platform will be carried out in task
 
 The Gantt chart of the activities is shown in fig.\ref{gannt}. The frontend of the PoC platform will be in charge of Dualistic, while the backend and the metascheduler will be developed by eXact lab. The activities will be carried out in close collaboration with the other partners of the dealii-X project, UniPI in particular. 
 \begin{figure}
-    \label{gannt}
     \includegraphics[width=400pt]{gantt.png}
     \caption{Timeline of the activities of task 2.6, Creation of the PoC platform}
+    \label{gannt}
 \end{figure}
 The PoC platform is foreseseen to be a valuable exploitable result of the dealii-X project, and will be used to showcase the capabilities of the libraries developed in the project.
 
