--- a/D4.3/D4.3_data_management_plan.tex
+++ b/D4.3/D4.3_data_management_plan.tex
@@ -25,9 +25,9 @@
 \begin{deliverableTable}
     \tableEntry{Deliverable title}{Data Management Plan}
     \tableEntry{Deliverable number}{D4.3}
-    \tableEntry{Deliverable version}{[Version number]}
+    \tableEntry{Deliverable version}{4.0}
     \tableEntry{Date of delivery}{31 March 2025}
-    \tableEntry{Actual date of delivery}{31 March 2025}
+    \tableEntry{Actual date of delivery}{28 March 2025}
     \tableEntry{Nature of deliverable}{Report}
     \tableEntry{Dissemination level}{Public}
     \tableEntry{Work Package}{WP4}
@@ -43,15 +43,15 @@
 \newpage
 
 \begin{documentControl}
-    \addVersion{1.0}{20.03.2025}{M. Kronbichler}{DPMOnline Template}
-    \addVersion{2.0}{21.03.2025}{M. Kronbichler, I. Prusak, R. Schussnig}{Initial Draft}
-    % \addVersion{3.0}{24.03.2025}{[Author name]}{[Description of changes]}
-    \addVersion{3.0}{[Date]}{[Author name]}{Final version}
+    \addVersion{1.0}{20.03.2025}{M. Kronbichler}{DPMOnline template}
+    \addVersion{2.0}{21.03.2025}{M. Kronbichler, I. Prusak, R. Schussnig}{Initial draft}
+    \addVersion{3.0}{26.03.2025}{M. Kronbichler, I. Prusak, R. Schussnig}{Partners' feedback collected}
+    \addVersion{4.0}{27.03.2025}{M. Kronbichler, I. Prusak, R. Schussnig}{Final version}
 \end{documentControl}
 
 \subsection*{{Approval Details}}
-Approved by: [Name] \\
-Approval Date: [Date]
+Approved by: M. Kronbichler\\
+Approval Date: 27.03.2025
 
 \subsection*{{Distribution List}}
 \begin{itemize}
@@ -219,7 +219,7 @@ The metadata associated with both datasets and software will follow widely recog
 
 \noindent \textbf{Specify which data will be made openly available? If some data is kept closed provide rationale for doing so}
 
-All software and computational tools developed within the project will be openly available. Simulation data used in scientific publications will also be made publicly accessible, ensuring transparency and reproducibility. Any data that may be subject to restrictions, if applicable, will be handled in accordance with legal or ethical guidelines. However, the project does not expect to work with highly sensitive data.
+As much of the software and computational tools will be made openly available as possible, following the best-practices of open-source software the partners have established in the past.  Simulation data used in scientific publications will also be made publicly accessible, ensuring transparency and reproducibility. In this context, it can be expected to cover the vast majority of all research results, covering all core algorithms. Any data that may be subject to restrictions, if applicable, will be handled in accordance with legal or ethical guidelines. However, the project does not expect to work with highly sensitive data.
 
 \noindent \textbf{Specify how the data will be made available}
 
@@ -264,7 +264,7 @@ The standard vocabulary will be used for all data types present in our datasets,
 
 \noindent \textbf{Specify how the data will be licenced to permit the widest reuse possible}
 
-All datasets and software produced in the project will be made publicly available and licensed under open-source licenses. This will allow for the widest possible reuse, consistent with the relevant software repositories' policies. 
+As much of the datasets and software produced in the project as possible will be made publicly available under open-source licenses, following the partners' established best practices in open-source development. Licensing will align with the policies of the relevant software repositories, ensuring the widest possible reuse while maintaining compatibility with the broader scientific computing community. 
 
 \noindent \textbf{Specify when the data will be made available for reuse. If applicable, specify why and for what period a data embargo is needed}
 
@@ -272,7 +272,7 @@ Data will be made available upon publication. No embargo will be applied, except
 
 \noindent \textbf{Specify whether the data produced and/or used in the project is useable by third parties, in particular after the end of the project? If the reuse of some data is restricted, explain why}
 
-All datasets and software will be designed for reuse by third parties, even after the project's completion. Any reuse restrictions will be based solely on legal or ethical considerations, but highly sensitive data is not anticipated in the project.
+Datasets and software will be designed for reuse by third parties, even after the project's completion. Any reuse restrictions will be based solely on legal or ethical considerations, but highly sensitive data is not anticipated in the project.
 
 \noindent \textbf{Describe data quality assurance processes}
 
