--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -25,7 +25,7 @@
 \begin{deliverableTable}
     \tableEntry{Deliverable title}{Connection to other CoEs}
     \tableEntry{Deliverable number}{D3.1}
-    \tableEntry{Deliverable version}{[Version number]}
+    \tableEntry{Deliverable version}{4.0}
     \tableEntry{Date of delivery}{31 March 2025}
     \tableEntry{Actual date of delivery}{31 March 2025}
     \tableEntry{Nature of deliverable}{Report}
@@ -45,14 +45,14 @@
 
 \begin{documentControl}
     \addVersion{1.0}{20.03.2025}{M. Kronbichler}{Initial Draft}
-    \addVersion{2.0}{25.03.2025}{I. Pribec, G. Mathias, M. Allalen}{Feedback on Document}
-    % \addVersion{3.0}{24.03.2025}{[Author name]}{[Description of changes]}
-    \addVersion{3.0}{[Date]}{[Author name]}{Final version}
+    \addVersion{2.0}{27.03.2025}{I. Pribec, G. Mathias, M. Allalen}{Augment Document}
+    \addVersion{3.0}{27.03.2025}{M. Kronbichler}{Minor Additions}
+    \addVersion{4.0}{27.03.2025}{I. Pribec}{Final Version}
 \end{documentControl}
 
 \subsection*{{Approval Details}}
-Approved by: [Name] \\
-Approval Date: [Date]
+Approved by: Martin Kronbichler \\
+Approval Date: 31.03.2025
 
 \subsection*{{Distribution List}}
 \begin{itemize}
@@ -164,8 +164,8 @@ and use cases.
 
 In December 2024 to February 2025, we have intensively collaborated with Work
 Package 2 of CASTIEL 2 concerning the codes and use cases. We have presented
-our three main mathematical codes, \texttt{deal.II}, \texttt{PSCToolkit} and
-\texttt{MUMPS} for the CoE codes whitebook version 1.3, using the following
+our three main mathematical codes, \href{https://github.com/dealii/dealii}{\texttt{deal.II}}, \href{https://psctoolkit.github.io/libraries/}{\texttt{PSCToolkit}} and
+\href{https://mumps-solver.org/index.php}{\texttt{MUMPS}} for the CoE codes whitebook version 1.3, using the following
 descriptions:
 
 
@@ -176,17 +176,17 @@ descriptions:
   \hline
   \textbf{Code} & \textbf{Category} & \textbf{Description} & \textbf{Main uses} \\
   \hline
-  deal.II & \begin{minipage}{0.1\textwidth}Multi-physics\end{minipage} & \begin{minipage}{0.4\textwidth}
+  \href{https://github.com/dealii/dealii}{deal.II} & \begin{minipage}{0.1\textwidth}Multi-physics\end{minipage} & \begin{minipage}{0.4\textwidth}
     Wide range of finite element algorithms, multigrid methods, matrix-free and matrix-based algorithms
   \end{minipage}
                                 & \begin{minipage}{0.26\textwidth}Discretization of partial differential equations\end{minipage}
   \\
-  PSCToolkit & \begin{minipage}{0.1\textwidth}Linear solver\end{minipage} &\begin{minipage}{0.4\textwidth}
+  \href{https://psctoolkit.github.io/libraries/}{PSCToolkit} & \begin{minipage}{0.1\textwidth}Linear solver\end{minipage} &\begin{minipage}{0.4\textwidth}
   Framework for solving large and sparse linear systems
   \end{minipage}
                                 & \begin{minipage}{0.26\textwidth}Linear algebra applications\end{minipage}
   \\
-  MUMPS & \begin{minipage}{0.1\textwidth}Linear solver\end{minipage} &\begin{minipage}{0.4\textwidth}
+  \href{https://mumps-solver.org/index.php}{MUMPS} & \begin{minipage}{0.1\textwidth}Linear solver\end{minipage} &\begin{minipage}{0.4\textwidth}
   A numerical software package for solving sparse systems of linear equations
   \end{minipage}
                                                            & \begin{minipage}{0.26\textwidth}Linear algebra applications\end{minipage}
@@ -195,9 +195,15 @@ descriptions:
 \end{tabular}
 }
 
-The information also contains URLs, owners of the code, the open-source status
-of the software packages, the size of user communities and related
-information.
+The provided information also contains URLs to the code repositories, owners
+of the code, the open-source status of the software packages, the size of user
+communities and related information. Similar descriptions have been provided
+for the application codes involved in the dealii-X CoE, including the
+\href{https://lifex.gitlab.io/}{lifex},
+\href{https://github.com/4C-multiphysics/4C}{4C},
+\href{https://github.com/exadg/exadg}{ExaDG},
+\href{https://github.com/fdrmrc/Polydeal}{polyDEAL}, LiverX and
+\href{https://github.com/BRAINIACS-Group/ExaBrain}{ExaBrain} projects.
 
 Furthermore, we have delivered details on the technical aspects of the codes
 (size of project, dependencies, workflows, parallelization, supported
@@ -207,7 +213,12 @@ systems Lumi (porting to general GPU architecture), Leonardo (high priority),
 and JUPITER (high priority). We also engage in exchange of ideas concerning
 these systems. Furthermore, we have been open in checking for synergies in
 various developments, and will actively interact with partners at various
-scientific conference.
+scientific conferences. As a concrete step, the activities in WP2.6, with the
+details listed in deliverable D2.6, the dealii-X project aims to work towards
+a metascheduler for the simpler use of software across supercomputers. We will
+seek active collaboration with other CoEs concerning the use of distributed
+infrastructure and include available scheduling protocols developed within the
+EU in the past as much as possible.
 
 To foster this exchange, the dealii-X project will be represented in the
 NCC-CoE-all-hands meeting in Tallinn, Estonia, in September 23--25, 2025.
@@ -255,6 +266,15 @@ the seminars will follow a standard format of a 45-minute lecture followed by a
 project webpage and shared via social media channels. This initiative will be
 carried out in close collaboration with the VPH Institute, which will assist in
 editing and publishing the multimedia content (WP4).
+
+Through the seminar initiative, we will also establish contacts to other
+EuroHPC CoEs. It is planned that several talks will be given by researchers in
+adjacent projects, giving the dealii-X members insights cutting-edge progress
+of related topics. This setup will foster the collaboration between the
+projects. As a platform to learn from other researchers and other projects,
+the activities in the seminar series will boost the qualifications of our team
+members and create opportunities for research results beyond the present state
+of the art.
 
 \label{MyLastPage}
 
