--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -149,10 +149,10 @@ with the main project description
 \end{center}
 
 We have integrated the dealii-X web page at \url{https://www.dealii-X.eu},
-where we report on the recent development of the dealii-X project in terms of
+where we report on the recent developments of the dealii-X project in terms of
 codes, scientific achievements, and prizes, to just name a few. We have
 clarified this involvement with CASTIEL 2 and are committed to provide future
-updates as requested by our partners. On point of contact is the interaction
+updates as requested by our partners. One point of contact is the interaction
 of dealii-X with partners from Ginkgo, who are active in the MICROCARD-2
 project.
 
