Add trainings section

--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -276,6 +276,28 @@ the activities in the seminar series will boost the qualifications of our team
 members and create opportunities for research results beyond the present state
 of the art.
 
+\section{Training and Workshops}
+
+One of the consortium’s key goals is to enhance the training of clinical
+researchers and practitioners through specialized workshops and interactive,
+hands-on sessions. LRZ has a well-established mission to provide education on
+programming and HPC-related topics. In response to growing demand, its course
+offerings have expanded significantly in recent years to include GPU
+programming, deep learning, and AI. These training sessions are promoted
+through LRZ’s existing HPC network as well as EuroCC dissemination channels.
+
+LRZ has actively contributed to several European projects, including
+CompBioMed 1 \& 2 and LEXIS, where it played a key role in organizing meetings,
+application-focused workshops, and hackathons (e.g., the preCICE workshop and
+the CompBioMed-SEAVEA hackathon).
+
+As part of the dealii-X consortium, the first workshop is scheduled for
+December 2025, hosted by SISSA. The event will feature an open users and
+developers workshop, followed by project-specific sessions addressing critical
+topics such as co-design, exascale computing, and machine learning/deep
+learning. These sessions aim to strengthen partner collaboration and foster
+multidisciplinary research.
+
 \label{MyLastPage}
 
 
