Remove redundant numbers

--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -287,7 +287,7 @@ programming, deep learning, and AI. These training sessions are promoted
 through LRZ’s existing HPC network as well as EuroCC dissemination channels.
 
 LRZ has actively contributed to several European projects, including
-CompBioMed 1 \& 2 and LEXIS, where it played a key role in organizing meetings,
+CompBioMed and LEXIS, where it played a key role in organizing meetings,
 application-focused workshops, and hackathons (e.g., the preCICE workshop and
 the CompBioMed-SEAVEA hackathon).
 
