--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -17,7 +17,7 @@
 \begin{document}
 
 % Create the title page with the title as argument
-\maketitlepage{Data Management Plan}
+\maketitlepage{Connection to other CoEs}
 
 \newpage
 
